added a constraint handler function so that none of the parameters are set to zero and it tries to run.

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -481,6 +481,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# maybe consider implementing this later\n",
+    "\n",
+    "# # Define the feasibility function\n",
+    "# def feasible(individual):\n",
+    "#     for i, lst in zip(individual, lol):\n",
+    "#         # find the min of the list\n",
+    "#         min = lst.min()\n",
+    "#         # find the max of the list\n",
+    "#         max = lst.max()\n",
+    "#         if i < min or i > max:\n",
+    "#             return False\n",
+    "#         else:\n",
+    "#             return True\n",
+    "\n",
+    "# # Define a distance function to the feasibility region\n",
+    "# def distance(individual):\n",
+    "#     return individual[0]  # Simple distance function\n",
+    "\n",
+    "# # Decorate the evaluation function with a DeltaPenalty decorator\n",
+    "# toolbox.decorate(\"evaluate\", tools.DeltaPenalty(feasible,  0.0, distance))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -619,11 +647,14 @@
    ],
    "source": [
     "# Define the fitness function\n",
-    "# if 'FitnessMax' not in dir(sys.modules['__main__']):\n",
-    "#     creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+    "import sys\n",
+    "# Check if FitnessMax already exists in the __main__ namespace\n",
+    "if 'FitnessMax' not in sys.modules['__main__'].__dict__:\n",
+    "    # If not, create it\n",
+    "    creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "\n",
-    "# if 'Individual' not in dir(sys.modules['__main__']):\n",
-    "#     creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+    "if 'Individual' not in sys.modules['__main__'].__dict__:\n",
+    "    creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
     "# creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "# creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
     "\n",
@@ -635,6 +666,7 @@
     "discard_threshold = 20  # Discard the first 20 evaluations\n",
     "\n",
     "toolbox = base.Toolbox()\n",
+    "lol = [brick_size_list, increment_list, max_list, ma_list, signal_list, lot_sizes_list]\n",
     "\n",
     "# Register an attribute generator for each parameter with its own range\n",
     "toolbox.register(\"brick_size\", np.random.choice, brick_size_list)\n",
@@ -660,6 +692,7 @@
     "    # Unpack individual parameters\n",
     "    brick_size, inc, max, ma, signal, lot_size = individual\n",
     "    print(brick_size, inc, max, ma, signal, lot_size)\n",
+    "    \n",
     "    \n",
     "    # Perform calculations using these parameters\n",
     "    total_profit, days_in_drawdown = making_calculations(df_2024, brick_size, inc, max, ma, signal, brick_size*2, lot_size)\n",
@@ -693,6 +726,19 @@
     "# toolbox.register(\"mate\", tools.cxTwoPoint)\n",
     "toolbox.register(\"mutate\", tools.mutGaussian, mu=0, sigma=1, indpb=0.1)\n",
     "\n",
+    "\n",
+    "def constraint_handler(individual):\n",
+    "    counter = 0\n",
+    "    for i, lst in zip(individual, lol):\n",
+    "        # Ensure parameter is greater than   0\n",
+    "        if i <= 0:\n",
+    "            individual[counter] = np.random.choice(lst)  # Reset to a valid value\n",
+    "        counter += 1\n",
+    "    return individual\n",
+    "\n",
+    "# Decorate the mutation operator with the constraint handler\n",
+    "toolbox.decorate(\"mate\", tools.Constraint(constraint_handler))\n",
+    "toolbox.decorate(\"mutate\", tools.Constraint(constraint_handler))\n",
     "\n",
     "# Create initial population\n",
     "population = toolbox.population(n=population_size)\n",
