--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -6429,12 +6429,12 @@
     "# Define the fitness function\n",
     "import sys\n",
     "# Check if FitnessMax already exists in the __main__ namespace\n",
-    "if 'FitnessMax' not in sys.modules['__main__'].__dict__:\n",
-    "    # If not, create it\n",
-    "    creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+    "# if 'FitnessMax' not in sys.modules['__main__'].__dict__:\n",
+    "#     # If not, create it\n",
+    "#     creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "\n",
-    "if 'Individual' not in sys.modules['__main__'].__dict__:\n",
-    "    creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+    "# if 'Individual' not in sys.modules['__main__'].__dict__:\n",
+    "#     creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
     "# creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
     "# creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
     "\n",
