changed the profit_df_daily to remove the weekends

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -387,6 +387,10 @@
     "    profit_df_new_index = profit_df.set_index('entry_time')\n",
     "    # find the sum of the nova and msolutions profit for each day\n",
     "    profit_df_daily = profit_df_new_index.resample('D').agg({'nova_profit': 'sum'})\n",
+    "    # drop the weekends by first adding in a new day of the week column\n",
+    "    profit_df_daily['day_of_week'] = profit_df_daily.index.day_name()\n",
+    "    # drop any day that is Saturday or Sunday\n",
+    "    profit_df_daily = profit_df_daily.loc[(profit_df_daily['day_of_week'] != 'Saturday') & (profit_df_daily['day_of_week'] != 'Sunday')]\n",
     "    # find the number of times that profit_df_daily is below zero\n",
     "    profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
     "    # find the sum of nova_negative and msolutions_negative\n",
@@ -6647,6 +6651,26 @@
    ],
    "source": [
     "making_calculations(df_2023, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, best_lot_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4781"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6581-1800"
    ]
   }
  ],
