--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -2761,22 +2761,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>high</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>low</th>\n",
+       "      <th>psar</th>\n",
+       "      <th>md</th>\n",
+       "      <th>sb</th>\n",
+       "      <th>psar_signal</th>\n",
+       "      <th>impulse_signal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 00:00:00</th>\n",
+       "      <td>1.07887</td>\n",
+       "      <td>1.0788</td>\n",
+       "      <td>1.0785</td>\n",
+       "      <td>1.07850</td>\n",
+       "      <td>1.078122</td>\n",
+       "      <td>-0.002441</td>\n",
+       "      <td>-0.002588</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 00:00:00</th>\n",
+       "      <td>1.07850</td>\n",
+       "      <td>1.0785</td>\n",
+       "      <td>1.0782</td>\n",
+       "      <td>1.07820</td>\n",
+       "      <td>1.078153</td>\n",
+       "      <td>-0.002444</td>\n",
+       "      <td>-0.002563</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 01:04:00</th>\n",
+       "      <td>1.07860</td>\n",
+       "      <td>1.0782</td>\n",
+       "      <td>1.0779</td>\n",
+       "      <td>1.07790</td>\n",
+       "      <td>1.078870</td>\n",
+       "      <td>-0.002450</td>\n",
+       "      <td>-0.002541</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 01:07:00</th>\n",
+       "      <td>1.07795</td>\n",
+       "      <td>1.0779</td>\n",
+       "      <td>1.0776</td>\n",
+       "      <td>1.07760</td>\n",
+       "      <td>1.078851</td>\n",
+       "      <td>-0.002487</td>\n",
+       "      <td>-0.002524</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 01:12:00</th>\n",
+       "      <td>1.07761</td>\n",
+       "      <td>1.0776</td>\n",
+       "      <td>1.0773</td>\n",
+       "      <td>1.07730</td>\n",
+       "      <td>1.078801</td>\n",
+       "      <td>-0.002539</td>\n",
+       "      <td>-0.002510</td>\n",
+       "      <td>sell</td>\n",
+       "      <td>sell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 19:21:00</th>\n",
+       "      <td>1.07370</td>\n",
+       "      <td>1.0734</td>\n",
+       "      <td>1.0737</td>\n",
+       "      <td>1.07340</td>\n",
+       "      <td>1.072410</td>\n",
+       "      <td>-0.003027</td>\n",
+       "      <td>-0.003074</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 19:28:00</th>\n",
+       "      <td>1.07400</td>\n",
+       "      <td>1.0737</td>\n",
+       "      <td>1.0740</td>\n",
+       "      <td>1.07370</td>\n",
+       "      <td>1.072462</td>\n",
+       "      <td>-0.002934</td>\n",
+       "      <td>-0.003063</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 20:13:00</th>\n",
+       "      <td>1.07430</td>\n",
+       "      <td>1.0740</td>\n",
+       "      <td>1.0743</td>\n",
+       "      <td>1.07378</td>\n",
+       "      <td>1.072554</td>\n",
+       "      <td>-0.002821</td>\n",
+       "      <td>-0.003035</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 20:48:00</th>\n",
+       "      <td>1.07460</td>\n",
+       "      <td>1.0743</td>\n",
+       "      <td>1.0746</td>\n",
+       "      <td>1.07416</td>\n",
+       "      <td>1.072694</td>\n",
+       "      <td>-0.002686</td>\n",
+       "      <td>-0.002995</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-05 22:10:00</th>\n",
+       "      <td>1.07465</td>\n",
+       "      <td>1.0743</td>\n",
+       "      <td>1.0740</td>\n",
+       "      <td>1.07400</td>\n",
+       "      <td>1.072884</td>\n",
+       "      <td>-0.002579</td>\n",
+       "      <td>-0.002942</td>\n",
+       "      <td>buy</td>\n",
+       "      <td>buy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "62"
+       "                        high    open   close      low      psar        md  \\\n",
+       "datetime                                                                    \n",
+       "2024-02-05 00:00:00  1.07887  1.0788  1.0785  1.07850  1.078122 -0.002441   \n",
+       "2024-02-05 00:00:00  1.07850  1.0785  1.0782  1.07820  1.078153 -0.002444   \n",
+       "2024-02-05 01:04:00  1.07860  1.0782  1.0779  1.07790  1.078870 -0.002450   \n",
+       "2024-02-05 01:07:00  1.07795  1.0779  1.0776  1.07760  1.078851 -0.002487   \n",
+       "2024-02-05 01:12:00  1.07761  1.0776  1.0773  1.07730  1.078801 -0.002539   \n",
+       "...                      ...     ...     ...      ...       ...       ...   \n",
+       "2024-02-05 19:21:00  1.07370  1.0734  1.0737  1.07340  1.072410 -0.003027   \n",
+       "2024-02-05 19:28:00  1.07400  1.0737  1.0740  1.07370  1.072462 -0.002934   \n",
+       "2024-02-05 20:13:00  1.07430  1.0740  1.0743  1.07378  1.072554 -0.002821   \n",
+       "2024-02-05 20:48:00  1.07460  1.0743  1.0746  1.07416  1.072694 -0.002686   \n",
+       "2024-02-05 22:10:00  1.07465  1.0743  1.0740  1.07400  1.072884 -0.002579   \n",
+       "\n",
+       "                           sb psar_signal impulse_signal  \n",
+       "datetime                                                  \n",
+       "2024-02-05 00:00:00 -0.002588         buy            buy  \n",
+       "2024-02-05 00:00:00 -0.002563         buy            buy  \n",
+       "2024-02-05 01:04:00 -0.002541        sell            buy  \n",
+       "2024-02-05 01:07:00 -0.002524        sell            buy  \n",
+       "2024-02-05 01:12:00 -0.002510        sell           sell  \n",
+       "...                       ...         ...            ...  \n",
+       "2024-02-05 19:21:00 -0.003074         buy            buy  \n",
+       "2024-02-05 19:28:00 -0.003063         buy            buy  \n",
+       "2024-02-05 20:13:00 -0.003035         buy            buy  \n",
+       "2024-02-05 20:48:00 -0.002995         buy            buy  \n",
+       "2024-02-05 22:10:00 -0.002942         buy            buy  \n",
+       "\n",
+       "[62 rows x 9 columns]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(renko_df_one_day['psar'])"
+    "renko_df_one_day.loc[:,['high','open', 'close', 'low', 'psar', 'md', 'sb', 'psar_signal', 'impulse_signal']]"
    ]
   },
   {
