changed lot_size to be a pre-set in the optimization function and not optimized for. Which also showed a flaw in the code

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -237,13 +237,13 @@
     "signal_list = np.arange(1, 51, 1)\n",
     "\n",
     "# Lot Size\n",
-    "lot_size = 10\n",
+    "initial_lot_size = 2\n",
     "lot_sizes_list = np.arange(1, 5, 1)\n",
     "per_lot = 100000\n",
     "\n",
     "# Commissions\n",
-    "nova_commission = lot_size * -3\n",
-    "msolutions_commission = lot_size * -5\n",
+    "nova_commission = -3\n",
+    "msolutions_commission = -5\n",
     "\n",
     "# starting balance\n",
     "balance = 200000\n",
@@ -380,8 +380,8 @@
     "                                            np.where((profit_df['direction'].str.strip() == 'short'),\n",
     "                                                    (profit_df['entry_price'] - profit_df['exit_price'])*per_lot*(lots), np.nan))\n",
     "    profit_df = fx.add_swap_rates(profit_df, base_currency_rate, quote_currency_rate, lots=lots)\n",
-    "    profit_df['nova_profit'] = profit_df['profit'] + nova_commission + profit_df['swap_rate']\n",
-    "    profit_df['msolutions_profit'] = profit_df['profit'] + msolutions_commission + profit_df['swap_rate']\n",
+    "    profit_df['nova_profit'] = profit_df['profit'] + (nova_commission*lots) + profit_df['swap_rate']\n",
+    "    profit_df['msolutions_profit'] = profit_df['profit'] + (msolutions_commission*lots) + profit_df['swap_rate']\n",
     "    # use the entry time and resample to each day and find the sum of the profit\n",
     "    profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
     "    profit_df_new_index = profit_df.set_index('entry_time')\n",
@@ -455,9 +455,9 @@
    ],
    "source": [
     "# results for standard values\n",
-    "print('2022 data: ', making_calculations(df_2022, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, lot_size))\n",
-    "print('2023 data: ', making_calculations(df_2023, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, lot_size))\n",
-    "print('2024 data: ', making_calculations(df_2024, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, lot_size))\n",
+    "print('2022 data: ', making_calculations(df_2022, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "print('2023 data: ', making_calculations(df_2023, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "print('2024 data: ', making_calculations(df_2024, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
     "# 2022 data:  ($1,136,669.99, 53)\n",
     "# 2023 data:  ($447,824.99, 82)\n",
     "# 2024 data:  ($20,509.99, 15)"
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lol = [brick_size_list, increment_list, max_list, ma_list, signal_list, lot_sizes_list]\n",
+    "lol = [brick_size_list, increment_list, max_list, ma_list, signal_list] # , lot_sizes_list\n",
     "def constraint_handler(individual):\n",
     "    counter = 0\n",
     "    for i, lst in zip(individual, lol):\n",
@@ -5300,12 +5300,12 @@
     "toolbox.register(\"maximum\", np.random.choice, max_list)\n",
     "toolbox.register(\"ma\", np.random.choice, ma_list)\n",
     "toolbox.register(\"signal\", np.random.choice, signal_list)\n",
-    "toolbox.register(\"lot_size\", np.random.choice, lot_sizes_list)\n",
+    "# toolbox.register(\"lot_size\", np.random.choice, lot_sizes_list)\n",
     "\n",
     "# Combine the attribute generators to create an individual\n",
     "toolbox.register(\"individual\", tools.initCycle, creator.Individual,\n",
     "                  (toolbox.brick_size, toolbox.increment, toolbox.maximum,\n",
-    "                   toolbox.ma, toolbox.signal, toolbox.lot_size))\n",
+    "                   toolbox.ma, toolbox.signal))# , toolbox.lot_size\n",
     "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
     "\n",
     "\n",
@@ -5316,16 +5316,16 @@
     "    global num_evaluations  # A global variable to keep track of the number of evaluations\n",
     "\n",
     "    # Unpack individual parameters\n",
-    "    brick_size, inc, max, ma, signal, lot_size = individual\n",
-    "    print(brick_size, inc, max, ma, signal, lot_size)\n",
+    "    brick_size, inc, max, ma, signal = individual #, lot_size\n",
+    "    print(brick_size, inc, max, ma, signal) # , lot_size\n",
     "    for i in individual:\n",
     "        if i <= 0:\n",
     "            individual = constraint_handler(individual)\n",
-    "            brick_size, inc, max, ma, signal, lot_size = individual\n",
-    "            print(brick_size, inc, max, ma, signal, lot_size) \n",
+    "            brick_size, inc, max, ma, signal = individual #, lot_size\n",
+    "            print(brick_size, inc, max, ma, signal) #, lot_size\n",
     "\n",
     "    # Perform calculations using these parameters\n",
-    "    total_profit, days_in_drawdown = making_calculations(df_2024, brick_size, inc, max, ma, signal, brick_size*2, lot_size)\n",
+    "    total_profit, days_in_drawdown = making_calculations(df_2024, brick_size, inc, max, ma, signal, brick_size*2, initial_lot_size)\n",
     "\n",
     "    # Update the global lists with the new values\n",
     "    global_total_profits.append(total_profit)\n",
