made a few other minor changes for lot_size

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -5469,8 +5469,8 @@
     }
    ],
    "source": [
-    "best_brick, best_inc, best_max, best_ma, best_signal, best_lot_size = best_ind\n",
-    "making_calculations(df_2022, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, best_lot_size)\n",
+    "best_brick, best_inc, best_max, best_ma, best_signal = best_ind #, best_lot_size\n",
+    "making_calculations(df_2022, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, initial_lot_size)\n",
     "# lot size of up to 20: \n",
     "# 2,930,645.56 (0) = 2024\n",
     "# 33,552,970.14 (0) = 2023\n",
@@ -5515,7 +5515,7 @@
     }
    ],
    "source": [
-    "making_calculations(df_2023, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, best_lot_size)"
+    "making_calculations(df_2023, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, initial_lot_size)"
    ]
   },
   {
@@ -5535,7 +5535,7 @@
     }
    ],
    "source": [
-    "making_calculations(df_2024, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, best_lot_size)"
+    "making_calculations(df_2024, best_brick, best_inc, best_max, best_ma, best_signal, best_brick*2, initial_lot_size)"
    ]
   }
  ],
