removed brick_size as an option, just set it to 10 pips

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "# Renko variable\n",
-    "initial_brick_size = 0.000325\n",
+    "initial_brick_size = 0.0001\n",
     "# create a list of possible brick sizes a max at 0.001 and min at 0.00001 and each step is 0.00001\n",
     "brick_size_list = np.arange(0.00007, 0.00101, 0.00001)\n",
     "# get one random brick size\n",
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lol = [brick_size_list, increment_list, max_list, ma_list, signal_list] # , lot_sizes_list\n",
+    "lol = [increment_list, max_list, ma_list, signal_list] # , lot_sizes_list, brick_size_list, \n",
     "def constraint_handler(individual):\n",
     "    counter = 0\n",
     "    for i, lst in zip(individual, lol):\n",
@@ -7707,7 +7707,7 @@
     "toolbox = base.Toolbox()\n",
     "\n",
     "# Register an attribute generator for each parameter with its own range\n",
-    "toolbox.register(\"brick_size\", np.random.choice, brick_size_list)\n",
+    "# toolbox.register(\"brick_size\", np.random.choice, brick_size_list)\n",
     "toolbox.register(\"increment\", np.random.choice, increment_list)\n",
     "toolbox.register(\"maximum\", np.random.choice, max_list)\n",
     "toolbox.register(\"ma\", np.random.choice, ma_list)\n",
@@ -7716,8 +7716,8 @@
     "\n",
     "# Combine the attribute generators to create an individual\n",
     "toolbox.register(\"individual\", tools.initCycle, creator.Individual,\n",
-    "                  (toolbox.brick_size, toolbox.increment, toolbox.maximum,\n",
-    "                   toolbox.ma, toolbox.signal))# , toolbox.lot_size\n",
+    "                  (toolbox.increment, toolbox.maximum,\n",
+    "                   toolbox.ma, toolbox.signal))# , toolbox.lot_size, toolbox.brick_size,\n",
     "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
     "\n",
     "\n",
@@ -7728,16 +7728,16 @@
     "    global num_evaluations  # A global variable to keep track of the number of evaluations\n",
     "\n",
     "    # Unpack individual parameters\n",
-    "    brick_size, inc, max, ma, signal = individual #, lot_size\n",
-    "    print(brick_size, inc, max, ma, signal) # , lot_size\n",
+    "    inc, max, ma, signal = individual #, lot_size, brick_size\n",
+    "    print(inc, max, ma, signal) # , lot_size, brick_size\n",
     "    for i in individual:\n",
     "        if i <= 0:\n",
     "            individual = constraint_handler(individual)\n",
-    "            brick_size, inc, max, ma, signal = individual #, lot_size\n",
-    "            print(brick_size, inc, max, ma, signal) #, lot_size\n",
+    "            inc, max, ma, signal = individual #, lot_size, brick_size\n",
+    "            print(inc, max, ma, signal) #, lot_size, brick_size\n",
     "\n",
     "    # Perform calculations using these parameters\n",
-    "    total_profit, days_in_drawdown = making_calculations(df_2024, brick_size, inc, max, ma, signal, brick_size*2, initial_lot_size)\n",
+    "    total_profit, days_in_drawdown = making_calculations(df_2024, initial_brick_size, inc, max, ma, signal, initial_brick_size*2, initial_lot_size)\n",
     "\n",
     "    # Update the global lists with the new values\n",
     "    global_total_profits.append(total_profit)\n",
