--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,183 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1971.01.04</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5369</td>\n",
-       "      <td>0.5369</td>\n",
-       "      <td>0.5369</td>\n",
-       "      <td>0.5369</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1971.01.05</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5366</td>\n",
-       "      <td>0.5366</td>\n",
-       "      <td>0.5366</td>\n",
-       "      <td>0.5366</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1971.01.06</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5365</td>\n",
-       "      <td>0.5365</td>\n",
-       "      <td>0.5365</td>\n",
-       "      <td>0.5365</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1971.01.07</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5368</td>\n",
-       "      <td>0.5368</td>\n",
-       "      <td>0.5368</td>\n",
-       "      <td>0.5368</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1971.01.08</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1971.01.11</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1971.01.12</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>0.5371</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1971.01.13</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5373</td>\n",
-       "      <td>0.5373</td>\n",
-       "      <td>0.5373</td>\n",
-       "      <td>0.5373</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1971.01.14</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5372</td>\n",
-       "      <td>0.5372</td>\n",
-       "      <td>0.5372</td>\n",
-       "      <td>0.5372</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1971.01.15</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>0.5376</td>\n",
-       "      <td>0.5376</td>\n",
-       "      <td>0.5376</td>\n",
-       "      <td>0.5376</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date   time    open    high     low   close  volume\n",
-       "0  1971.01.04  00:00  0.5369  0.5369  0.5369  0.5369       1\n",
-       "1  1971.01.05  00:00  0.5366  0.5366  0.5366  0.5366       1\n",
-       "2  1971.01.06  00:00  0.5365  0.5365  0.5365  0.5365       1\n",
-       "3  1971.01.07  00:00  0.5368  0.5368  0.5368  0.5368       1\n",
-       "4  1971.01.08  00:00  0.5371  0.5371  0.5371  0.5371       1\n",
-       "5  1971.01.11  00:00  0.5371  0.5371  0.5371  0.5371       1\n",
-       "6  1971.01.12  00:00  0.5371  0.5371  0.5371  0.5371       1\n",
-       "7  1971.01.13  00:00  0.5373  0.5373  0.5373  0.5373       1\n",
-       "8  1971.01.14  00:00  0.5372  0.5372  0.5372  0.5372       1\n",
-       "9  1971.01.15  00:00  0.5376  0.5376  0.5376  0.5376       1"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# collect the actual data from csv file\n",
     "filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1.csv\"\n",
-    "df_full = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "df_full.head(10)"
+    "tickstory_filename = \"C:/Users/WilliamFetzner/Documents/Trading/3mo_EURUSD.csv\"\n",
+    "df_tick = pd.read_csv(tickstory_filename)\n",
+    "df_tick['datetime'] = pd.to_datetime(df_tick['Timestamp'], format='%Y%m%d %H:%M:%S:%f')\n",
+    "# rename bid price to close\n",
+    "df_tick.rename(columns={'Bid price':'close'}, inplace=True)\n",
+    "df_tick.set_index('datetime', inplace=True)\n",
+    "df_tick_ready = df_tick[['close']]\n",
+    "# df_full = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
+    "df_tick_ready.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert date to datetime\n",
-    "df_full['datetime'] = pd.to_datetime(df_full['date'] + ' ' + df_full['time'], format='%Y.%m.%d %H:%M')\n",
+    "# df_full['datetime'] = pd.to_datetime(df_full['date'] + ' ' + df_full['time'], format='%Y.%m.%d %H:%M')\n",
     "# filter the data to just 2023\n",
     "\n",
-    "df_2022 = fx.prep_data(df_full, 2022)\n",
-    "df_2023 = fx.prep_data(df_full, 2023)\n",
-    "df_2024 = fx.prep_data(df_full, 2024)"
+    "# df_2022 = fx.prep_data(df_full, 2022)\n",
+    "# df_2023 = fx.prep_data(df_full, 2023)\n",
+    "# df_2024 = fx.prep_data(df_full, 2024)"
    ]
   },
   {
@@ -212,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,28 +107,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34,\n",
-       "       35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "signal_list"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,8 +124,6 @@
     "    r_full = Renko(df, brick_size=brick_size)\n",
     "    # create a new dataframe from the renko features\n",
     "    renko_data = r_full.renko_df()\n",
-    "    # rename 'volume' to 'nbars'\n",
-    "    renko_data = renko_data.rename(columns={'volume': 'nbars'})\n",
     "    return renko_data\n"
    ]
   },
@@ -419,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -435,60 +264,44 @@
    ],
    "source": [
     "# find the max date of df_2024 \n",
-    "df_2024.index.max()"
+    "# df_2024.index.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\renkodf\\renkodf.py:46: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"datetime\"] = df.index\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022 data:  (2483704.999999688, 0)\n",
-      "2023 data:  (1259859.999999836, 3)\n",
-      "2024 data:  (102494.99999998647, 1)\n"
+      "last 3 months data:  (23329.99999998533, 33)\n"
      ]
     }
    ],
    "source": [
     "# results for standard values\n",
-    "print('2022 data: ', making_calculations(df_2022, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
-    "print('2023 data: ', making_calculations(df_2023, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
-    "print('2024 data: ', making_calculations(df_2024, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "# print('2022 data: ', making_calculations(df_2022, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "# print('2023 data: ', making_calculations(df_2023, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "# print('2024 data: ', making_calculations(df_2024, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
+    "# print('last 3 months data: ', making_calculations(df_tick_ready, initial_brick_size, start, maximum, lengthMA, lengthSignal, initial_brick_size*2, initial_lot_size))\n",
     "# 2022 data:  ($1,136,669.99, 53)\n",
     "# 2023 data:  ($447,824.99, 82)\n",
-    "# 2024 data:  ($20,509.99, 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# maybe consider implementing this later\n",
-    "\n",
-    "# # Define the feasibility function\n",
-    "# def feasible(individual):\n",
-    "#     for i, lst in zip(individual, lol):\n",
-    "#         # find the min of the list\n",
-    "#         min = lst.min()\n",
-    "#         # find the max of the list\n",
-    "#         max = lst.max()\n",
-    "#         if min < i < max:\n",
-    "#             return False\n",
-    "#         else:\n",
-    "#             return True\n",
-    "\n",
-    "# # Define a distance function to the feasibility region\n",
-    "# def distance(individual):\n",
-    "#     return individual[0]  # Simple distance function\n",
-    "\n",
-    "# # Decorate the evaluation function with a DeltaPenalty decorator\n",
-    "# toolbox.decorate(\"evaluate\", tools.DeltaPenalty(feasible,  0.0, distance))"
+    "# 2024 data:  ($20,509.99, 15)\n",
+    "# last 3 months data:  (23,329.99, 33)"
    ]
   },
   {
@@ -497,7 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lol = [increment_list, max_list, ma_list, signal_list] # , lot_sizes_list, brick_size_list, \n",
+    "lol = [brick_size_list, increment_list, max_list, ma_list, signal_list] # , lot_sizes_list,  \n",
     "def constraint_handler(individual):\n",
     "    counter = 0\n",
     "    for i, lst in zip(individual, lol):\n",
@@ -7949,7 +7762,7 @@
     "toolbox = base.Toolbox()\n",
     "\n",
     "# Register an attribute generator for each parameter with its own range\n",
-    "# toolbox.register(\"brick_size\", np.random.choice, brick_size_list)\n",
+    "toolbox.register(\"brick_size\", np.random.choice, brick_size_list)\n",
     "toolbox.register(\"increment\", np.random.choice, increment_list)\n",
     "toolbox.register(\"maximum\", np.random.choice, max_list)\n",
     "toolbox.register(\"ma\", np.random.choice, ma_list)\n",
@@ -7958,8 +7771,8 @@
     "\n",
     "# Combine the attribute generators to create an individual\n",
     "toolbox.register(\"individual\", tools.initCycle, creator.Individual,\n",
-    "                  (toolbox.increment, toolbox.maximum,\n",
-    "                   toolbox.ma, toolbox.signal))# , toolbox.lot_size, toolbox.brick_size,\n",
+    "                  (toolbox.brick_size, toolbox.increment, toolbox.maximum,\n",
+    "                   toolbox.ma, toolbox.signal))# , toolbox.lot_size, \n",
     "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
     "\n",
     "\n",
@@ -7970,16 +7783,16 @@
     "    global num_evaluations  # A global variable to keep track of the number of evaluations\n",
     "\n",
     "    # Unpack individual parameters\n",
-    "    inc, max, ma, signal = individual #, lot_size, brick_size\n",
-    "    print(inc, max, ma, signal) # , lot_size, brick_size\n",
+    "    brick_size, inc, max, ma, signal = individual #, lot_size, brick_size\n",
+    "    print(brick_size, inc, max, ma, signal) # , lot_size, brick_size\n",
     "    for i in individual:\n",
     "        if i <= 0:\n",
     "            individual = constraint_handler(individual)\n",
-    "            inc, max, ma, signal = individual #, lot_size, brick_size\n",
-    "            print(inc, max, ma, signal) #, lot_size, brick_size\n",
+    "            brick_size,inc, max, ma, signal = individual #, lot_size,\n",
+    "            print(brick_size, inc, max, ma, signal) #, lot_size, \n",
     "\n",
     "    # Perform calculations using these parameters\n",
-    "    total_profit, days_in_drawdown = making_calculations(df_2024, initial_brick_size, inc, max, ma, signal, initial_brick_size*2, initial_lot_size)\n",
+    "    total_profit, days_in_drawdown = making_calculations(df_tick_ready, brick_size, inc, max, ma, signal, brick_size*2, initial_lot_size)\n",
     "\n",
     "    # Update the global lists with the new values\n",
     "    global_total_profits.append(total_profit)\n",
@@ -8112,8 +7925,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_inc, best_max, best_ma, best_signal = best_ind #, best_lot_size, best_brick, \n",
-    "results_2022 = making_calculations(df_2022, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
+    "best_brick, best_inc, best_max, best_ma, best_signal = best_ind #, best_lot_size,  \n",
+    "results_3mo = making_calculations(df_tick_ready, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
    ]
   },
   {
@@ -8122,7 +7935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_2023 = making_calculations(df_2023, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
+    "# results_2023 = making_calculations(df_2023, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
    ]
   },
   {
@@ -8131,7 +7944,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_2024 = making_calculations(df_2024, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
+    "# results_2024 = making_calculations(df_2024, initial_brick_size, best_inc, best_max, best_ma, best_signal, initial_brick_size*2, initial_lot_size)"
    ]
   },
   {
@@ -8143,11 +7956,12 @@
     "# read in the best_parameters_IP.xlsx file\n",
     "best_parameters = pd.read_excel('C:/Users/WilliamFetzner/Documents/Trading/best_parameters_IP.xlsx')\n",
     "# create a new row with the best parameters\n",
-    "new_row_added = pd.concat([best_parameters, pd.DataFrame({'best_brick': [initial_brick_size], 'best_inc': [best_inc], 'best_max': [best_max], 'best_ma': [best_ma], 'best_signal': [best_signal],\n",
-    "           'lot_size': [initial_lot_size], 'lot size options': 'set to 5', '2024': [results_2024[0]], '2023': [results_2023[0]], \n",
-    "           '2022': [results_2022[0]]})], ignore_index=True)\n",
+    "new_row_added = pd.concat([best_parameters, pd.DataFrame({'best_brick': [best_brick], 'best_inc': [best_inc], 'best_max': [best_max], 'best_ma': [best_ma], 'best_signal': [best_signal],\n",
+    "           'lot_size': [initial_lot_size], 'lot size options': 'set to 5', '2024': [0], '2023': [0], \n",
+    "           '2022': [0], '3 months': results_3mo[0]})], ignore_index=True)\n",
     "# save the best_parameters dataframe to the best_parameters_IP.xlsx file\n",
-    "new_row_added.to_excel('C:/Users/WilliamFetzner/Documents/Trading/best_parameters_IP.xlsx', index=False)"
+    "new_row_added.to_excel('C:/Users/WilliamFetzner/Documents/Trading/best_parameters_IP.xlsx', index=False)\n",
+    "new_row_added"
    ]
   }
  ],
